--- a/blog/templates/blog/inicio.html
+++ b/blog/templates/blog/inicio.html
@@ -1,11 +1,16 @@
 {% extends 'blog/base.html' %}
 
 {% block contenido %}
-
-    {% for i in publicaciones %}
-        <h2>{{ i.titulo }}</h2>
-        <p><i>Por: {{ i.autor }}, {{ i.fecha_publicado }}</i></p>
-        <p>{{ i.contenido}}</p>
-    {% endfor %}
-
+{% for i in publicaciones %}
+<article class="media content-section">
+    <div class="media-body">
+        <div class="article-metadata">
+            <a class="mr-2" href="#">{{ i.autor }}</a>
+            <small class="text-muted">{{ i.fecha_publicado }}</small>
+        </div>
+        <h2><a class="article-title" href="#">{{ i.titulo }}</a></h2>
+        <p class="article-content">{{ i.contenido }}</p>
+    </div>
+</article>
+{% endfor %}
 {% endblock contenido %}
