--- a/blog/templates/blog/inicio.html
+++ b/blog/templates/blog/inicio.html
@@ -5,11 +5,11 @@
 <article class="media content-section">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="#">{{ i.autor }}</a>
-            <small class="text-muted">{{ i.fecha_publicado }}</small>
+            <a class="mr-2" href="#">{{ i.author }}</a>
+            <small class="text-muted">{{ i.date_posted }}</small>
         </div>
-        <h2><a class="article-title" href="#">{{ i.titulo }}</a></h2>
-        <p class="article-content">{{ i.contenido }}</p>
+        <h2><a class="article-title" href="#">{{ i.title }}</a></h2>
+        <p class="article-content">{{ i.content }}</p>
     </div>
 </article>
 {% endfor %}
