--- a/blog/templates/blog/inicio.html
+++ b/blog/templates/blog/inicio.html
@@ -6,7 +6,7 @@
     <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ i.author }}</a>
-            <small class="text-muted">{{ i.date_posted }}</small>
+            <small class="text-muted">{{ i.date_posted|date:"d F, Y" }}</small>
         </div>
         <h2><a class="article-title" href="#">{{ i.title }}</a></h2>
         <p class="article-content">{{ i.content }}</p>
