--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -46,6 +46,15 @@
     <main role="main" class="container">
         <div class="row">
             <div class="col-md-8">
+                <!-- FLASH MESSAGES -->
+                {% if messages %}
+                    {% for m in messages %}
+                        <div class="alert alert-{{ m.tags }}">
+                            {{ m }}
+                        </div>
+                    {% endfor %}
+                {% endif%}
+                <!-- CONTENIDO -->
                 {% block contenido %}{% endblock contenido %}
             </div>
             <div class="col-md-4">
