--- a/usuarios/templates/usuarios/registro.html
+++ b/usuarios/templates/usuarios/registro.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block contenido %}
 
@@ -7,7 +8,7 @@
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">¡Regístrate ahora!</legend>
-            {{ form_reg.as_p }}
+            {{ form_reg|crispy }}
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Regístrate</button>
