--- a/usuarios/templates/usuarios/registro.html
+++ b/usuarios/templates/usuarios/registro.html
@@ -16,7 +16,7 @@
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            ¿Ya tienes una cuenta? <a class="ml-2" href="#">Ingresar</a>
+            ¿Ya tienes una cuenta? <a class="ml-2" href="{% url 'ingreso' %}">Ingresar</a>
         </small>
     </div>
 </div>
