--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -37,7 +37,7 @@
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{% url 'blog-inicio' %}">Mi Cuenta</a>
+                            <a class="nav-item nav-link" href="{% url 'usuarios-prf' %}">Mi Perfil</a>
                             <a class="nav-item nav-link" href="{% url 'salida' %}">Logout</a>
                         {% else %}
                             <a class="nav-item nav-link" href="{% url 'ingreso' %}">Login</a>
